--- a/templates/views/blog/_pagination.html.twig
+++ b/templates/views/blog/_pagination.html.twig
@@ -5,6 +5,9 @@
 				{% if paginator.hasPreviousPage %}
 					<li class="prev arrow"><a href="{{ path('blog_paginated', {page: paginator.previousPage, author: author, tag: app.request.get('tag')}) }}" rel="previous"><i class="fa fw fa-chevron-left"></i></a></li>
 				{% endif %}
+				{% if paginator.hasPreviousPage %}
+    				<li class="prev arrow"><a href="{{ path('blog_paginated', {page: paginator.previousPage, author: author, tag: app.request.get('tag'), query: app.request.get('query')}) }}" rel="previous"><i class="fa fw fa-chevron-left"></i></a></li>
+				{% endif %}
 
 				{% for i in 1..paginator.lastPage %}
 					{% if i == paginator.currentPage %}
@@ -15,7 +18,7 @@
 				{% endfor %}
 
 				{% if paginator.hasNextPage %}
-					<li class="next arrow"><a href="{{ path('blog_paginated', {page: paginator.nextPage, author: author, tag: app.request.get('tag')}) }}" rel="next"><i class="fa fw fa-chevron-right"></i></a></li>
+					<li class="next arrow"><a href="{{ path('blog_paginated', {page: paginator.nextPage, author: author, tag: app.request.get('tag')}), query: app.request.get('query') }}" rel="next"><i class="fa fw fa-chevron-right"></i></a></li>
 				{% endif %}
 			</ul>
 		</div>
